h-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hnginx
  template:
    metadata:
      labels:
        app: hnginx
    spec:
      containers:
        - name: hnginx
          image: oolralra/hnginx
---
apiVersion: v1
kind: Service
metadata:
  name: h-svc
spec:
  selector:
    app: hnginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
