ip-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ip-svc
spec:
  selector:
    app: ipnginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
