sb-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sb-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
        - name: spring
          image: oolralra/sbimage:27
---
apiVersion: v1
kind: Service
metadata:
  name: sb-svc
spec:
  selector:
    app: spring
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8085
  type: NodePort
