sb-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: sb-svc
spec:
  selector:
    app: spring
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8085
  type: NodePort
